--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "npx prettier --check . && eslint \"./**/*.js\""
   },
   "dependencies": {
+    "@trustwallet/wallet-core": "^3.2.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
     "husky": "^8.0.3",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0"
